# pymmcore-widgets

./: .cruft.json  .github_changelog_generator  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  example.py  flat.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  snap.py  test_undo_redo.py  tox.ini  widget_list.json  wiz.py  x.py  y.py  z.py  zz.py
.github/: ISSUE_TEMPLATE.md  TEST_FAIL_TEMPLATE.md
.github/workflows/: ci.yml  cron.yml  docs.yml
contributing/: index.html
docs/: _create_images_for_docs.py  _gen_widget_pages.py  _hooks.py  _macros.py  contributing.md  getting_started.md  index.md  troubleshooting.md  widget_list.json  widget_list.yaml
docs/images/: basic_usage.mov
docs/widgets/: CameraRoiWidget.md  ChannelWidget.md  ConfigurationWidget.md  DefaultCameraExposureWidget.md  DeviceWidget.md  ExposureWidget.md  GroupPresetTableWidget.md  HCSWidget.md  ImagePreview.md  LiveButton.md  MDAWidget.md  MultiDWidget.md  ObjectivesWidget.md  PixelSizeWidget.md  PresetsWidget.md  PropertyBrowser.md  PropertyWidget.md  SampleExplorerWidget.md  ShutterWidget.md  SliderDialog.md  SnapButton.md  StageWidget.md  StateDeviceWidget.md  index.md
examples/: basic_usage.py  camera_roi_widget.py  channel_config_widget.py  channel_group_widget.py  channel_table.py  channel_widget.py  checkable_tab_widget.py  config_group_widget.py  config_groups_editor.py  config_groups_tree.py  config_preset_table.py  config_presets_table.py  config_wizard.py  configuration_widget.py  core_connected_grid_plan_widget.py  core_connected_position_table.py  core_connected_z_plan_widget.py  core_log_widget.py  custom_gui.py  default_camera_exposure_widget.py  device_widget.py  exposure_widget.py  flat.py  grid_plan_widget.py  grid_widget.py  group_preset_dialog.py  group_preset_table_widget.py  group_preset_widget.py  hcs_widget.py  hcs_wizard.py  image_preview.py  image_widget.py  install_widget.py  joystick.py  live_button.py  log_widget.py  mda_demo.py  mda_sequence_widget.py  mda_useq.py  mda_viewer.py  (+44 more)
examples/hcs_temp/: calibration_circle.py  calibration_rectangle.py  fov_selector.py  plate_database_widget.py  plate_selector.py
examples/stack_viewer/: dask_arr.py  jax_arr.py  numpy_arr.py  tensorstore_arr.py  xarray_arr.py  zarr_arr.py
examples/temp/: grid_from_polygon.py  plate_calibration_widget.py  plate_navigator_widget.py  well_calibration_widget.py
getting_started/: index.html
search/: search_index.json
src/pymmcore_widgets/: __init__.py  _camera_roi_widget.py  _camera_roi_widget_for_napari.py  _channel_group_widget.py  _channel_table_widget.py  _channel_widget.py  _config_preset_table.py  _config_widget.py  _core.py  _device_property_table.py  _device_type_filter.py  _device_widget.py  _exposure_widget.py  _general_mda_widgets.py  _general_pixel_size_widget.py  _group_preset_table_widget.py  _humanize.py  _icons.py  _image_widget.py  _install_widget.py  _installation_widget.py  _live_button_widget.py  _load_system_cfg_widget.py  _log.py  _objective_widget.py  _objectives_pixel_configuration_widget.py  _oc_dialog.py  _pixel_config_widget.py  _pixel_configuration_widget.py  _pixel_size_widget.py  _presets_widget.py  _properties_widget.py  _property_browser.py  _property_selector.py  _property_widget.py  _sample_explorer_widget.py  _shutter_widget.py  _slider_dialog.py  _slider_dialog_widget.py  _snap_button_widget.py  (+31 more)
src/pymmcore_widgets/_deprecated/: _device_widget.py
src/useq_widgets/: __init__.py  _mda_sequence.py  _positions.py  _time.py  _z.py
tests/: _utils.py  conftest.py  plate_database_for_tests.json  test_cam_objective.py  test_camera_roi_widget.py  test_channel_group_widget.py  test_channel_table_widget.py  test_channel_widget.py  test_combo_message_box_widget.py  test_config.cfg  test_config_groups_editor.py  test_config_groups_model.py  test_config_groups_widgets.py  test_config_wizard.py  test_core_log_widget.py  test_core_state.py  test_datastore.py  test_device_widget.py  test_explorer.py  test_exposure_widget.py  test_get_next_available_path.py  test_grid_widget.py  test_group_preset_widget.py  test_hcs_widget.py  test_humanize.py  test_icons.py  test_image_preview.py  test_install_widget.py  test_live_button.py  test_load_system_cfg_widget.py  test_mda_viewer.py  test_mda_widget.py  test_misc.py  test_multid_widget.py  test_objective_pixel_config_widget.py  test_objective_widget.py  test_pixel_config_widget.py  test_pixel_size_widget.py  test_position_table_widget.py  test_presets_widget.py  (+25 more)
tests/hcs/: test_hcs_wizard.py  test_plate_navigator.py  test_well_calibration_widget.py  test_well_plate_calibration_widget.py
tests/test_hcs/: test_plate_navigator.py  test_well_calibration_widget.py
tests/useq_widgets/: test_plate_widget.py  test_useq_points_plans.py  test_useq_widgets.py
troubleshooting/: index.html
widgets/: index.html
widgets/CameraRoiWidget/: index.html
widgets/ChannelGroupWidget/: index.html
widgets/ChannelTable/: index.html
widgets/ChannelWidget/: index.html
widgets/ConfigWizard/: index.html
widgets/ConfigurationWidget/: index.html
widgets/CoreLogWidget/: index.html
widgets/DefaultCameraExposureWidget/: index.html
widgets/ExposureWidget/: index.html
widgets/GridPlanWidget/: index.html
widgets/GroupPresetTableWidget/: index.html
widgets/ImagePreview/: index.html
widgets/InstallWidget/: index.html
widgets/LiveButton/: index.html
widgets/MDASequenceWidget/: index.html
widgets/MDAWidget/: index.html
widgets/ObjectivesPixelConfigurationWidget/: index.html
widgets/ObjectivesWidget/: index.html
widgets/PixelConfigurationWidget/: index.html
widgets/PositionTable/: index.html
widgets/PresetsWidget/: index.html
widgets/PropertiesWidget/: index.html
widgets/PropertyBrowser/: index.html
widgets/PropertyWidget/: index.html
widgets/ShuttersWidget/: index.html
widgets/SnapButton/: index.html
widgets/StageWidget/: index.html
widgets/TimePlanWidget/: index.html
widgets/ZPlanWidget/: index.html
(+292 files in other folders)
